Fixing comment section form spacing

--- a/src/pages/Subreddit/CommentsSection/CommentsSection.module.css
+++ b/src/pages/Subreddit/CommentsSection/CommentsSection.module.css
@@ -10,32 +10,34 @@
   border: none;
 }
 .comments-section__username {
-    color:#4FBCFF;
-    font-weight: 400;
-    line-height: 16px;
+  color: #4fbcff;
+  font-weight: 400;
+  line-height: 16px;
+}
+.comments-section__comments-form {
+  background-color: #272729;
+  border-radius: 0px 0px 4px 4px;
 }
 .comments-section__comments-form-button-container {
-    background-color: #272729;
-    width: 100%;
-    padding: 6px 8px;
-    box-sizing: border-box;
-    border-radius: 0px 0px 4px 4px;
-    display: flex;
-    justify-content: flex-end;
+  width: 100%;
+  padding: 6px 8px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: flex-end;
 }
 .comments-section__comments-form-button {
-    background-color: #dfe1e3;
-    color: rgba(26,26,27,0.5);
-    padding-left: 20px;
-    padding-right: 20px;
-    height: 24px;
-    border: none;
-    white-space: pre;
-    box-sizing: border-box;
-    border-radius: 9999px;
+  background-color: #dfe1e3;
+  color: rgba(26, 26, 27, 0.5);
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 24px;
+  border: none;
+  white-space: pre;
+  box-sizing: border-box;
+  border-radius: 9999px;
 }
 .comments-section__comments-form-button:hover {
-    cursor: not-allowed;
+  cursor: not-allowed;
 }
 .comments-section__comments-form-textarea {
   width: 100%;
